# covid-service-rs

./: .gitignore  Cargo.toml  Dockerfile  README.md  docker-compose.yml  log4rs.yml
.github/workflows/: ci.yml  release.yml  rust.yml
src/: alpha3_country_codes.rs  data_processing.rs  data_sources.rs  lib.rs  logging.rs  main.rs  schema.rs
tests/: basic.rs  csv_data_processing_test.rs  data_processing_test.rs
