[package]
name = "covid-service-rs"
version = "1.0.5"
authors = ["Mukund Bhudia <mukund_bhudia@hotmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
serde = { version = "1.0", features = ["derive"] }
reqwest = { version = "0.10", features = ["json"] }
tokio = { version = "1.1", features = ["full"] }
csv = "1.1"
log = "0.4"
log4rs = "1.0"
chrono = { version = "0.4", features = ["serde"] }
mongodb = "1.1"
