[package]
name = "covid-service-rs"
version = "1.3.1"
authors = ["Mukund Bhudia <code@mukund.uk>"]
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
serde = { version = "1.0", features = ["derive"] }
reqwest = { version = "0.11", features = ["json"] }
tokio = { version = "1.27", features = ["full"] }
csv = "1.2"
log = "0.4"
log4rs = "1.2"
chrono = { version = "0.4", features = ["serde"] }
mongodb = "2.4"
